--- a/profiles/templates/profiles/edit.html
+++ b/profiles/templates/profiles/edit.html
@@ -73,7 +73,7 @@
         document.querySelectorAll(".pos_data").forEach(pos => {
             position = document.getElementById(pos.dataset["id"])
             position.style.display = "flex"
-            colorSelected(position.className[0] + " " + position.className.slice(-1), "unset")
+            colorSelected(position.className[0] + " " + position.className.slice(-1), "var(--bs-body-color)")
             placeRelative(
                 position,
                 pos.dataset["y"],
