--- a/profiles/static/style/main.css
+++ b/profiles/static/style/main.css
@@ -35,13 +35,13 @@
     display: inline;
     visibility: hidden;
 }
-#choices {
-    width: max-content;
-    height: max-content;
-    border-width: 3px;
-    border-style: solid;
-    padding: 6px;
-}
+/* #choices { */
+/*     width: max-content; */
+/*     height: max-content; */
+/*     border-width: 3px; */
+/*     border-style: solid; */
+/*     padding: 6px; */
+/* } */
 #image_container {
     position: relative;
     display: inline-block;
@@ -49,61 +49,62 @@
     background-size: contain;
     min-width: 100%;
 }
-#image_desc {
-    border-width: 3px;
-    border-style: solid;
-    width: fit-content;
-    display: inline-block;
-    font-weight: bold;
-    font-size: x-large;
-}
+/* #image_desc { */
+/*     border-width: 3px; */
+/*     border-style: solid; */
+/*     width: fit-content; */
+/*     display: inline-block; */
+/*     font-weight: bold; */
+/*     font-size: x-large; */
+/* } */
 button {
     border-width: 3px;
     border-style: solid;
     width: fit-content;
     cursor: pointer;
 }
-#positions {
-    border-width: 3px;
-    border-style: solid;
-    padding: 6px;
-    margin: 3px;
-}
+/* #positions { */
+/*     border-width: 3px; */
+/*     border-style: solid; */
+/*     padding: 6px; */
+/*     margin: 3px; */
+/* } */
 #visual {
     width: fit-content;
 }
-.own_techniques {
-    border-width: 3px;
-    border-style: solid;
-    padding: .25cm;
+.own td, .own_techniques {
+    /* border-width: 3px; */
+    /* border-style: solid; */
+    /* padding: .25cm; */
     width: 100%;
     height: 100%;
 }
 #own0, #own3 {
-    left: 50%;
+    left: 25%;
     position: relative;
+    width: 50%;
 }
-.own_technique {
-    padding: 2%;
-    margin-top: 0%;
-    text-align: center;
-    vertical-align: middle;
-}
-#own_container, #ranks {
-    border-width: 3px;
-    border-style: solid;
-}
+/* .own_technique { */
+/*     padding: 2%; */
+/*     margin-top: 0%; */
+/*     text-align: center; */
+/*     vertical-align: middle; */
+/* } */
+/* #own_container, #ranks { */
+/*     border-width: 3px; */
+/*     border-style: solid; */
+/* } */
 #side_container {
     border-width: 3px;
     border-style: solid;
     margin-bottom: 7%;
     padding: 2.5%;
 }
-#general_container {
-    border-width: 3px;
-    border-style: solid;
-    padding: 1%;
-}
+/* #general_container { */
+/*     border-width: 3px; */
+/*     border-style: solid; */
+/*     padding: 1%; */
+/* } */
 label {
     -moz-user-select: none;
     -webkit-user-select: none;
@@ -121,6 +122,7 @@ label {
 }
 #ranks {
     width: 100%;
+    table-layout: fixed;
 }
 .rank_item {
     text-align: center;
@@ -136,18 +138,18 @@ label {
 .own_techniques {
     table-layout: fixed;
 }
-#own td {
-    width: 50%;
-}
-#own tr {
-    display: flex;
-}
+/* #own td { */
+/*     width: 50%; */
+/* } */
+/* #own tr { */
+/*     display: flex; */
+/* } */
 .pos {
     width: 40%;
 }
-.own_t {
-    width: 60%;
-}
+/* .own_t { */
+/*     width: 60%; */
+/* } */
 .own_techniques td {
     width: 100%;
 }
