--- a/profiles/static/style/main.css
+++ b/profiles/static/style/main.css
@@ -15,6 +15,7 @@
     width: 16pt;
     border-width: 4pt;
     border-color: grey;
+    color: grey;
     border-style: solid;
     text-align: center;
     font-weight: bold;
@@ -33,7 +34,6 @@
     -ms-user-select: none;
     user-select: none;
     display: inline;
-    visibility: hidden;
 }
 /* #choices { */
 /*     width: max-content; */
@@ -72,14 +72,14 @@ button {
 #visual {
     width: fit-content;
 }
-.own td, .own_techniques {
+.own td {
     /* border-width: 3px; */
     /* border-style: solid; */
     /* padding: .25cm; */
     width: 100%;
     height: 100%;
 }
-#own0, #own3 {
+.middle {
     left: 25%;
     position: relative;
     width: 50%;
@@ -100,11 +100,9 @@ button {
     margin-bottom: 7%;
     padding: 2.5%;
 }
-/* #general_container { */
-/*     border-width: 3px; */
-/*     border-style: solid; */
-/*     padding: 1%; */
-/* } */
+#general_container {
+    width: fit-content;
+}
 label {
     -moz-user-select: none;
     -webkit-user-select: none;
