--- a/profiles/templates/profiles/new.html
+++ b/profiles/templates/profiles/new.html
@@ -56,43 +56,43 @@
 {% endblock %}
 
 {% block own0 %}
-    <tr><td>
-        <button class="btn btn-success btn-sm" onclick="add_own(0)">+</button>
-    </td></tr>
+    <div class="d-flex justify-content-center mb-2">
+        <button class="btn btn-success btn-sm" onclick="add_own(0)">Hinzufügen</button>
+    </div>
 {% endblock %}
 
 {% block own1 %}
-    <tr><td>
-        <button class="btn btn-success btn-sm" onclick="add_own(1)">+</button>
-    </td></tr>
+    <div class="d-flex justify-content-center mb-2">
+        <button class="btn btn-success btn-sm" onclick="add_own(1)">Hinzufügen</button>
+    </div>
 {% endblock %}
 
 {% block own2 %}
-    <tr><td>
-        <button class="btn btn-success btn-sm" onclick="add_own(2)">+</button>
-    </td></tr>
+    <div class="d-flex justify-content-center mb-2">
+        <button class="btn btn-success btn-sm" onclick="add_own(2)">Hinzufügen</button>
+    </div>
 {% endblock %}
 
 {% block own3 %}
-    <tr><td>
-        <button class="btn btn-success btn-sm" onclick="add_own(3)">+</button>
-    </td></tr>
+    <div class="d-flex justify-content-center mb-2">
+        <button class="btn btn-success btn-sm" onclick="add_own(3)">Hinzufügen</button>
+    </div>
 {% endblock %}
 
 {% block own4 %}
-    <tr><td>
-        <button class="btn btn-success btn-sm" onclick="add_own(4)">+</button>
-    </td></tr>
+    <div class="d-flex justify-content-center mb-2">
+        <button class="btn btn-success btn-sm" onclick="add_own(4)">Hinzufügen</button>
+    </div>
 {% endblock %}
 
 {% block own5 %}
-    <tr><td>
-        <button class="btn btn-success btn-sm" onclick="add_own(5)">+</button>
-    </td></tr>
+    <div class="d-flex justify-content-center mb-2">
+        <button class="btn btn-success btn-sm" onclick="add_own(5)">Hinzufügen</button>
+    </div>
 {% endblock %}
 
 {% block special %}
-    <button class="btn btn-success btn-sm" onclick="add_rank_item('special')">+</button>
+    <button class="btn btn-success btn-sm" onclick="add_rank_item('special')">Hinzufügen</button>
     <tr>
         <td id="special1" class="special"></td>
     </tr>
@@ -108,7 +108,7 @@
 {% endblock %}
 
 {% block ground %}
-    <button class="btn btn-success btn-sm" onclick="add_rank_item('ground')">+</button>
+    <button class="btn btn-success btn-sm" onclick="add_rank_item('ground')">Hinzufügen</button>
     <tr>
         <td id="ground1" class="ground"></td>
     </tr>
@@ -124,7 +124,7 @@
 {% endblock %}
 
 {% block combination %}
-    <button class="btn btn-success btn-sm" onclick="add_rank_item('combination')">+</button>
+    <button class="btn btn-success btn-sm" onclick="add_rank_item('combination')">Hinzufügen</button>
     <tr>
         <td id="combination1" class="combination"></td>
     </tr>
