--- a/profiles/templates/about.html
+++ b/profiles/templates/about.html
@@ -2,7 +2,7 @@
 
 {% block title %}Home{% endblock %}
 
-{% block home %}active" aria-current="page{% endblock %}
+{% block about %}active" aria-current="page{% endblock %}
 
 {% block content %}
     <div class="container text-center">
