improve user experience

--- a/profiles/templates/profiles.html
+++ b/profiles/templates/profiles.html
@@ -1,7 +1,7 @@
 {% extends "abstract/base.html" %}
 {% load has_group %}
 
-{% block title %}Startseite{% endblock %}
+{% block title %}Übersicht{% endblock %}
 
 {% block style %}
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
