--- a/profiles/templates/about.html
+++ b/profiles/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "abstract/base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Über{% endblock %}
 
 {% block about %}active" aria-current="page{% endblock %}
 
@@ -8,7 +8,7 @@
     <div class="container text-center">
         <h2>Einführung</h2>
         <p>
-            Diese Website ist ein Schul-/Hobbyprojekt von mir (<a href="https://github.com/technicfan">technicfan</a>), dass etwas größer ausgefallen ist, als anfangs gedacht.
+            Diese Website ist ein Schulprojekt von mir (<a href="https://github.com/technicfan">technicfan</a>), das etwas größer ausgefallen ist, als anfangs gedacht, weshalb es auch immer mehr zum Hobbyprojekt wurde.
             Es handelt sich um eine online Judo-Kämpferprofil-Verwaltung, die mehrere Trainer*innen gleichzeitug verwenden können.
             Außerdem kann auch den Judoka Zugriff zu ihren und auch zu anderen Profilen gewährt werden (durch Trainer*innen).
             Auch Trainer*innen können sich gegenseitig Lese- und Schreibzugriff zu den, von ihnen erstellten Profilen geben.
