--- a/users/templates/update.html
+++ b/users/templates/update.html
@@ -10,8 +10,13 @@
             {% csrf_token %}
             <input type="password" class="form-control"name="pass" placeholder="aktuelles Passwort" required>
             <br>
-            <input type="password" class="form-control" name="new_pass" placeholder="neues Passwort" required>
-            <input type="password" class="form-control" name="new_pass_confirm" placeholder="neues Passwort wiederholen" required>
+            <input type="password" class="form-control" name="new_pass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="neues Passwort" required>
+            <ul>
+                <li>mindestens 8 Zeichen</li>
+                <li>jeweils mindestens ein Groß- und Kleinbuchstabe</li>
+                <li>mindestens eine Ziffer</li>
+            </ul>
+            <input type="password" class="form-control" name="new_pass_confirm" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="neues Passwort wiederholen" required>
             <input type="submit" class="btn btn-secondary" value="Passwort ändern">
         </form>
     </div>
