--- a/profiles/static/style/main.css
+++ b/profiles/static/style/main.css
@@ -11,9 +11,11 @@
     cursor: pointer;
 }
 .position {
+    text-align: center;
+    align-items: center;
     height: 16pt;
     width: 16pt;
-    border-width: 4pt;
+    border-width: thick;
     border-color: grey;
     color: grey;
     border-style: solid;
@@ -23,7 +25,7 @@
     box-sizing: unset;
 }
 .r {
-    border-radius: 0px;
+    border-radius: 0;
 }
 .l {
     border-radius: 50%;
@@ -35,13 +37,6 @@
     user-select: none;
     display: inline;
 }
-/* #choices { */
-/*     width: max-content; */
-/*     height: max-content; */
-/*     border-width: 3px; */
-/*     border-style: solid; */
-/*     padding: 6px; */
-/* } */
 #image_container {
     position: relative;
     display: inline-block;
@@ -49,33 +44,16 @@
     background-size: contain;
     min-width: 100%;
 }
-/* #image_desc { */
-/*     border-width: 3px; */
-/*     border-style: solid; */
-/*     width: fit-content; */
-/*     display: inline-block; */
-/*     font-weight: bold; */
-/*     font-size: x-large; */
-/* } */
 button {
     border-width: 3px;
     border-style: solid;
     width: fit-content;
     cursor: pointer;
 }
-/* #positions { */
-/*     border-width: 3px; */
-/*     border-style: solid; */
-/*     padding: 6px; */
-/*     margin: 3px; */
-/* } */
 #visual {
     width: fit-content;
 }
 .own td {
-    /* border-width: 3px; */
-    /* border-style: solid; */
-    /* padding: .25cm; */
     width: 100%;
     height: 100%;
 }
@@ -83,25 +61,6 @@ button {
     left: 25%;
     position: relative;
     width: 50%;
-}
-/* .own_technique { */
-/*     padding: 2%; */
-/*     margin-top: 0%; */
-/*     text-align: center; */
-/*     vertical-align: middle; */
-/* } */
-/* #own_container, #ranks { */
-/*     border-width: 3px; */
-/*     border-style: solid; */
-/* } */
-#side_container {
-    border-width: 3px;
-    border-style: solid;
-    margin-bottom: 7%;
-    padding: 2.5%;
-}
-#general_container {
-    width: fit-content;
 }
 label {
     -moz-user-select: none;
@@ -129,25 +88,9 @@ label {
 #own {
     table-layout: fixed;
 }
-#main {
-    table-layout: fixed;
-    width: 100%;
-}
 .own_techniques {
     table-layout: fixed;
 }
-/* #own td { */
-/*     width: 50%; */
-/* } */
-/* #own tr { */
-/*     display: flex; */
-/* } */
-.pos {
-    width: 40%;
-}
-/* .own_t { */
-/*     width: 60%; */
-/* } */
 .own_techniques td {
     width: 100%;
 }
