--- a/profiles/templates/abstract/base.html
+++ b/profiles/templates/abstract/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html data-bs-theme="dark">
+<html lang="de" data-bs-theme="dark">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
